--- a/BLDC_controller.ioc
+++ b/BLDC_controller.ioc
@@ -20,6 +20,7 @@ Mcu.Pin13=PC10
 Mcu.Pin14=PB3
 Mcu.Pin15=VP_SYS_VS_Systick
 Mcu.Pin16=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin17=VP_TIM3_VS_no_output2
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
@@ -28,7 +29,7 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PA5
 Mcu.Pin8=PC6
 Mcu.Pin9=PC8
-Mcu.PinsNb=17
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RETx
@@ -145,7 +146,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -184,13 +185,15 @@ SH.S_TIM3_CH3.ConfNb=1
 SH.S_TIM3_CH4.0=TIM3_CH4,PWM Generation4 CH4
 SH.S_TIM3_CH4.ConfNb=1
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM3.Channel-PWM\ Generation2\ No\ Output=TIM_CHANNEL_2
 TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM3.CounterMode=TIM_COUNTERMODE_CENTERALIGNED1
-TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Period,Pulse-PWM Generation1 CH1,Pulse-PWM Generation3 CH3,CounterMode,Pulse-PWM Generation4 CH4,Prescaler
+TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Period,Pulse-PWM Generation1 CH1,Pulse-PWM Generation3 CH3,CounterMode,Pulse-PWM Generation4 CH4,Prescaler,Channel-PWM Generation2 No Output,Pulse-PWM Generation2 No Output
 TIM3.Period=2000
 TIM3.Prescaler=0
 TIM3.Pulse-PWM\ Generation1\ CH1=500
+TIM3.Pulse-PWM\ Generation2\ No\ Output=150
 TIM3.Pulse-PWM\ Generation3\ CH3=100
 TIM3.Pulse-PWM\ Generation4\ CH4=1000
 USART2.IPParameters=VirtualMode
@@ -199,6 +202,8 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM3_VS_no_output2.Mode=PWM Generation2 No Output
+VP_TIM3_VS_no_output2.Signal=TIM3_VS_no_output2
 board=NUCLEO-F401RE
 boardIOC=true
 isbadioc=false
