--- a/BLDC_controller.ioc
+++ b/BLDC_controller.ioc
@@ -58,10 +58,11 @@ Mcu.Pin18=PA10
 Mcu.Pin19=PA13
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin20=PA14
-Mcu.Pin21=PB3
-Mcu.Pin22=VP_SYS_VS_Systick
-Mcu.Pin23=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin24=VP_TIM1_VS_no_output4
+Mcu.Pin21=PD2
+Mcu.Pin22=PB3
+Mcu.Pin23=VP_SYS_VS_Systick
+Mcu.Pin24=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin25=VP_TIM1_VS_no_output4
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
 Mcu.Pin5=PA0-WKUP
@@ -69,7 +70,7 @@ Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA4
-Mcu.PinsNb=25
+Mcu.PinsNb=26
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RETx
@@ -78,6 +79,7 @@ MxDb.Version=DB.6.0.40
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false
@@ -160,6 +162,10 @@ PC9.GPIOParameters=GPIO_Label
 PC9.GPIO_Label=PWM_C
 PC9.Locked=true
 PC9.Signal=S_TIM3_CH4
+PD2.GPIOParameters=GPIO_Label
+PD2.GPIO_Label=motorEnable
+PD2.Locked=true
+PD2.Signal=GPIO_Output
 PH0\ -\ OSC_IN.Locked=true
 PH0\ -\ OSC_IN.Mode=HSE-External-Clock-Source
 PH0\ -\ OSC_IN.Signal=RCC_OSC_IN
